--- a/Lesson-4/Index.html
+++ b/Lesson-4/Index.html
@@ -6,9 +6,59 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
-
+<section>
+    <div class="wrapper">
+        <h2 class="h2_pricing">PRICING OPTIONS</h2>
+        <hr class="hr">
+        <h4 class="h4_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+        <div class="price">
+            <div class="basic">
+                <ul>
+                    <li class="version"> Basic </li>
+                    <li class="price1"> $10 </li>
+                    <li class="duration"> Free for life </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                </ul>
+            </div>
+            <div class="optima">
+                <ul>
+                    <li class="version"> Optima </li>
+                    <li class="price1"> $20 </li>
+                    <li class="duration"> Free for life </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                </ul>
+            </div>
+            <div class="pro">
+                <ul>
+                    <li class="version"> Pro </li>
+                    <li class="price1"> $30 </li>
+                    <li class="duration"> Free for life </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                    <li class="gb"> 1 Gb Of Space </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
