--- a/Lesson-4/Index.html
+++ b/Lesson-4/Index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<section>
+<section class="pricing">
     <div class="wrapper">
         <h2 class="h2_pricing">PRICING OPTIONS</h2>
         <hr class="hr">
