--- a/my-project/index.html
+++ b/my-project/index.html
@@ -15,14 +15,16 @@
 <header>
     <div class="header">
         <nav class="nav">
-            <a class="a_axit" href="#"><img src="assets/img/AXIT.png" alt=".img"></a>
-            <ul class="nav_list">
-                <li class="nav_list_item"><a class="a" href="#tabs">Features</a></li>
-                <li class="nav_list_item"><a class="a" href="#awesome">About</a></li>
-                <li class="nav_list_item"><a class="a" href="#pricing">Pricing</a></li>
-                <li class="nav_list_item"><a class="a" href="#customers">Reviews</a></li>
-                <li class="nav_list_item"><a class="a" href="#contacts">Contacts</a></li>
-            </ul>
+            <div class="nav_wrapper">
+                <a class="a_axit" href="#"><img src="assets/img/AXIT.png" alt=".img"></a>
+                <ul class="nav_list">
+                    <li class="nav_list_item"><a class="a_header" href="#tabs">Features</a></li>
+                    <li class="nav_list_item"><a class="a_header" href="#awesome">About</a></li>
+                    <li class="nav_list_item"><a class="a_header" href="#pricing">Pricing</a></li>
+                    <li class="nav_list_item"><a class="a_header" href="#customers">Reviews</a></li>
+                    <li class="nav_list_item"><a class="a_header" href="#contacts">Contacts</a></li>
+                </ul>
+            </div>
         </nav>
     </div>
 </header>
@@ -212,14 +214,14 @@
     </div>
 </section>
 <section class="customers">
-    <div class="wrapper">
+    <div class="wrapper_customers">
         <div class="customer" id="customers">
             <h2 class="h2-customers">what our customers are saying</h2>
         </div>
         <hr class="hr-customers">
         <p class="p-customers"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="opinions-customers">
-            <div class="opinion-customer">Lorem ipsum dolor sit amet,
+            <div class="opinion-customer opinion-customer1">Lorem ipsum dolor sit amet,
                 consectetur adipisicing elit. Doloribus
                 accusamus expedita repellat similique
                 odio aspernatur ex, architecto eaque
@@ -231,7 +233,7 @@
                 odio aspernatur ex, architecto eaque
                 quo suscipit.
             </div>
-            <div class="opinion-customer">Lorem ipsum dolor sit amet,
+            <div class="opinion-customer opinion-customer1">Lorem ipsum dolor sit amet,
                 consectetur adipisicing elit. Doloribus
                 accusamus expedita repellat similique
                 odio aspernatur ex, architecto eaque
@@ -240,7 +242,7 @@
 
         </div>
         <div class="who">
-            <div class="who-is-who">
+            <div class="who-is-who who-is-who1">
                 <img class="img-customer" src="assets/img/Ellipse1.png" alt="img">
                 <div>
                     <p class="name-customer">Davis Rhiel Madsen</p>
@@ -254,7 +256,7 @@
                     <p class="profession-customer">Manager</p>
                 </div>
             </div>
-            <div class="who-is-who">
+            <div class="who-is-who who-is-who1">
                 <img class="img-customer" src="assets/img/Ellipse3.png" alt="img">
                 <div>
                     <p class="name-customer">Cooper Dorwart</p>
