--- a/my-project/index.html
+++ b/my-project/index.html
@@ -58,8 +58,7 @@
     <div class="wrapper_social">
         <div>
             <h4 class="h4_social">Social Media</h4>
-            <p class="p_social">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <p class="p_social">Aenean euismod bibendum laoreet.</p>
+            <p class="p_social">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.</p>
         </div>
         <div class="icons">
             <svg class="img_icon" width="70" height="70" viewBox="0 0 70 70" fill="none"
