--- a/my-project/index.html
+++ b/my-project/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +14,19 @@
 
 <body>
 <header>
+    <div class="hamburger-menu">
+        <input id="menu" type="checkbox" />
+        <label class="menu__btn" for="menu">
+            <span></span>
+        </label>
+        <ul class="menu__box">
+            <li><a class="menu__item" href="#tabs">Features</a></li>
+            <li><a class="menu__item" href="#awesome">About</a></li>
+            <li><a class="menu__item" href="#pricing">Pricing</a></li>
+            <li><a class="menu__item" href="#customers">Reviews</a></li>
+            <li><a class="menu__item" href="#contacts">Contacts</a></li>
+        </ul>
+    </div>
     <div class="header">
         <nav class="nav">
             <div class="nav_wrapper">
