--- a/diplom/src/index.html
+++ b/diplom/src/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="scss/index.css">
     <title>Document</title>
 </head>
 
@@ -219,17 +218,54 @@
 
     <section class="testimonials">
         <div class="wrapper wrapper_testimonials">
-            <div class="wrapper_testimonials_1">
-                <div class="img_testimonials">
-                    <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
+            <div class="wrapper_testimonials_1 slider">
+                <div class="img_testimonials slider__item">
+                    <div class="slider__item__image">
+                        <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
+                    </div>
+                    <div class="testimonials_description">
+                        <h2 class="h2_testimonials">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h2>
+                        <p class="p_testimonials">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
                 </div>
-                <div class="testimonials_description">
-                    <h2 class="h2_testimonials">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
-                        Donec
-                        sed odio dui. Aenean eu leo quam...”</h2>
-                    <p class="p_testimonials">Susan Sims, Interaction Designer at XYZ</p>
+                <div class="img_testimonials slider__item">
+                    <div class="slider__item__image">
+                        <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
+                    </div>
+                    <div class="testimonials_description">
+                        <h2 class="h2_testimonials">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h2>
+                        <p class="p_testimonials">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                </div>
+                <div class="img_testimonials slider__item">
+                    <div class="slider__item__image">
+                        <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
+                    </div>
+                    <div class="testimonials_description">
+                        <h2 class="h2_testimonials">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h2>
+                        <p class="p_testimonials">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                </div>
+                <div class="img_testimonials slider__item">
+                    <div class="slider__item__image">
+                        <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
+                    </div>
+                    <div class="testimonials_description">
+                        <h2 class="h2_testimonials">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h2>
+                        <p class="p_testimonials">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
+                </div>
+                <div class="img_testimonials slider__item">
+                    <div class="slider__item__image">
+                        <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
+                    </div>
+                    <div class="testimonials_description">
+                        <h2 class="h2_testimonials">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</h2>
+                        <p class="p_testimonials">Susan Sims, Interaction Designer at XYZ</p>
+                    </div>
                 </div>
             </div>
+            <div class="content"></div>
         </div>
     </section>
 
@@ -274,8 +310,9 @@
         </div>
     </div>
 </footer>
-
-
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="module" src="js/main.js"></script>
 </body>
 
 </html>
