--- a/diplom/src/index.html
+++ b/diplom/src/index.html
@@ -218,7 +218,7 @@
 
     <section class="testimonials">
         <div class="wrapper wrapper_testimonials">
-            <div class="wrapper_testimonials_1 slider">
+             <div class="wrapper_testimonials_1 slider">
                 <div class="img_testimonials slider__item">
                     <div class="slider__item__image">
                         <img class="testimonials_img" src="assets/img/testimonials.png" alt="">
@@ -265,8 +265,9 @@
                     </div>
                 </div>
             </div>
-            <div class="content"></div>
+
         </div>
+        <div class="content"></div>
     </section>
 
     <section class="download">
@@ -306,10 +307,11 @@
         </div>
         <div class="second_footer">
             <h5 class="h5_second_footer">Copyright © 2015 ActiveBox. All Rights Reserved
-                Made with by Kamal Chaneman</h5>
+                Made with <span class="h5_second_footer white-text"> by Kamal Chaneman</span></h5>
         </div>
     </div>
 </footer>
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="module" src="js/main.js"></script>
